Edited setup.py for compilation under Windows

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,14 @@ so.*
 
 # Debug files
 *.dSYM/
+
+# Python artefacts
+*.pyc
+*.pyd
+*egg-info/
+/Python/build/
+
+# IDE files
+/.vscode/
+/.idea/
+/.ipynb_checkpoints/
